# network-labs

./: network-labs.cabal  stack.yaml
client/: Main.hs  Options.hs
scripts/: execFib.sh  execFileConsumer.sh  execFileProducer.sh  execSleep.sh  runConsumer.sh  runExecutor.sh  runProducer.sh
server/: Main.hs  Options.hs
src/: Common.hs
src/DNS/: Common.hs  Resolve.hs  Serve.hs  Trans.hs  Types.hs
src/Service/: Common.hs  Consumer.hs  Executor.hs  Producer.hs  Types.hs
