name:                network-labs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/network-labs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                     -- DNS related
                       DNS.Common
                     , DNS.Resolve
                     , DNS.Serve
                     , DNS.Trans
                     , DNS.Types

                     , Service.Consumer
                     , Service.Producer

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , iproute
                     , universum
                     , network-multicast
                     , network
                     , log-warper
                     , filepath
                     , stm
                     , mtl
                     , unordered-containers
                     , binary
                     , containers
                     , text
                     , hashable
                     , directory
                     , monad-par
                     , http-types >= 0.9
                     , wai-extra >= 3.0.19.1
                     , warp >= 3.2.11
                     , wreq >= 0.5.0.0
                     , scotty
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

executable network-labs-client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network-labs
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions:  NoImplicitPrelude

executable network-labs-server
  hs-source-dirs:      server
  main-is:             Main.hs
  other-modules:       Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network-labs
                     , universum
                     , binary
                     , optparse-simple
                     , parsec
                     , network
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions:  NoImplicitPrelude
                       RecordWildCards

source-repository head
  type:     git
  location: https://github.com/pva701/network-labs
